[package]
name = "openzeppelin-polkadot-wrappers"
authors = [ "OpenZeppelin" ]
description = "Wrappers with sensible defaults for constructing Polkadot Parachain Runtimes"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/OpenZeppelin/polkadot-runtime-wrappers"
readme = "README.md"
version = "0.1.0"

[dependencies]
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2407-1" }
scale-info = { version = "2.11.5", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2407-1" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2407-1" }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2407-1" }

[features]
default = [ "std" ]
std = [
	"cumulus-primitives-core/std",
	"frame-support/std",
	"scale-info/std",
	"sp-std/std",
	"sp-version/std",
]
