[package]
name = "openzeppelin-pallet-abstractions"
authors = [ "OpenZeppelin" ]
description = "Abstractions that provide sensible defaults for constructing Polkadot parachain runtimes"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/OpenZeppelin/openzeppelin-pallet-abstractions"
readme = "README.md"
version = "0.1.0"

[dependencies]
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2407-1" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2407-1" }
scale-info = { version = "2.11.1", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2407-1" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2407-1" }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-stable2407-1" }

[features]
default = [ "std" ]
std = [
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"sp-version/std",
]
