[package]
name = "openzeppelin-pallet-abstractions-proc"
version = "0.1.0"
edition = "2021"

[lib]
name = "openzeppelin_pallet_abstractions_proc"
path = "src/lib.rs"
proc-macro = true

[dependencies]
openzeppelin-pallet-abstractions = { path = "../" }
darling = "0.20.10"
proc-macro2 = "1.0.87"
quote = "1.0.37"
syn = "2.0.79"

[features]
async-backing = []
